# fastapi-rbac-ai

./: Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
internal/: db.py
migrations/: env.py
migrations/versions/: bde48ba732e8_init_schema.py
models/: generations.py  users.py
routers/: generations.py  openai.py  users.py
